--- a/storing data/storing_data_(need).ipynb
+++ b/storing data/storing_data_(need).ipynb
@@ -1,1 +1,576 @@
-{"cells": [{"cell_type": "markdown", "id": "123456", "metadata": {}, "attachments": {}, "source": ["<div style=\"text-align:left;font-size:2em\"><span style=\"font-weight:bolder;font-size:1.25em\">SP2273 | Learning Portfolio</span><br><br><span style=\"font-weight:bold;color:darkred\">Storing Data (Need)</span></div>"]}, {"cell_type": "markdown", "id": "123456", "metadata": {}, "attachments": {}, "source": ["## 1 Lists, Arrays & Dictionaries"]}, {"cell_type": "markdown", "id": "123456", "metadata": {}, "attachments": {}, "source": ["### 1.1 Let\u2019s compare"]}, {"cell_type": "code", "id": "123456", "metadata": {}, "execution_count": null, "outputs": [], "source": ["\n# Your code here\n"]}, {"cell_type": "markdown", "id": "123456", "metadata": {}, "attachments": {}, "source": ["### 1.2 Accessing data from a list (or array)"]}, {"cell_type": "code", "id": "123456", "metadata": {}, "execution_count": null, "outputs": [], "source": ["\n# Your code here\n"]}, {"cell_type": "markdown", "id": "123456", "metadata": {}, "attachments": {}, "source": ["### 1.3 Accessing data from a dictionary"]}, {"cell_type": "code", "id": "123456", "metadata": {}, "execution_count": null, "outputs": [], "source": ["\n# Your code here\n"]}, {"cell_type": "markdown", "id": "123456", "metadata": {}, "attachments": {}, "source": ["### 1.4 Higher dimensional lists"]}, {"cell_type": "code", "id": "123456", "metadata": {}, "execution_count": null, "outputs": [], "source": ["\n# Your code here\n"]}, {"cell_type": "markdown", "id": "123456", "metadata": {}, "attachments": {}, "source": ["## 2 Lists vs.\u00a0Arrays"]}, {"cell_type": "markdown", "id": "123456", "metadata": {}, "attachments": {}, "source": ["### 2.1 Size"]}, {"cell_type": "code", "id": "123456", "metadata": {}, "execution_count": null, "outputs": [], "source": ["\n# Your code here\n"]}, {"cell_type": "markdown", "id": "123456", "metadata": {}, "attachments": {}, "source": ["### 2.2 Arrays are fussy about type"]}, {"cell_type": "code", "id": "123456", "metadata": {}, "execution_count": null, "outputs": [], "source": ["\n# Your code here\n"]}, {"cell_type": "markdown", "id": "123456", "metadata": {}, "attachments": {}, "source": ["### 2.3 Adding a number"]}, {"cell_type": "code", "id": "123456", "metadata": {}, "execution_count": null, "outputs": [], "source": ["\n# Your code here\n"]}, {"cell_type": "markdown", "id": "123456", "metadata": {}, "attachments": {}, "source": ["### 2.4 Adding another list"]}, {"cell_type": "code", "id": "123456", "metadata": {}, "execution_count": null, "outputs": [], "source": ["\n# Your code here\n"]}, {"cell_type": "markdown", "id": "123456", "metadata": {}, "attachments": {}, "source": ["### 2.5 Multiplying by a Number"]}, {"cell_type": "code", "id": "123456", "metadata": {}, "execution_count": null, "outputs": [], "source": ["\n# Your code here\n"]}, {"cell_type": "markdown", "id": "123456", "metadata": {}, "attachments": {}, "source": ["### 2.6 Squaring"]}, {"cell_type": "code", "id": "123456", "metadata": {}, "execution_count": null, "outputs": [], "source": ["\n# Your code here\n"]}, {"cell_type": "markdown", "id": "123456", "metadata": {}, "attachments": {}, "source": ["### 2.7 Asking questions"]}, {"cell_type": "code", "id": "123456", "metadata": {}, "execution_count": null, "outputs": [], "source": ["\n# Your code here\n"]}, {"cell_type": "markdown", "id": "123456", "metadata": {}, "attachments": {}, "source": ["### 2.8 Mathematics"]}, {"cell_type": "code", "id": "123456", "metadata": {}, "execution_count": null, "outputs": [], "source": ["\n# Your code here\n"]}, {"cell_type": "markdown", "id": "123456", "metadata": {}, "attachments": {}, "source": ["## Exercise 1 :  Total recall?"]}, {"cell_type": "code", "id": "123456", "metadata": {}, "execution_count": null, "outputs": [], "source": ["\n\n\n# Your solution here\n\n\n"]}, {"cell_type": "markdown", "id": "123456", "metadata": {}, "attachments": {}, "source": ["## Exercise 2 :  Index me"]}, {"cell_type": "code", "id": "123456", "metadata": {}, "execution_count": null, "outputs": [], "source": ["\n\n\n# Your solution here\n\n\n"]}, {"cell_type": "markdown", "id": "123456", "metadata": {}, "attachments": {}, "source": ["## Exercise 3 :  Capitalise Heros"]}, {"cell_type": "code", "id": "123456", "metadata": {}, "execution_count": null, "outputs": [], "source": ["\n\n\n# Your solution here\n\n\n"]}, {"cell_type": "markdown", "id": "123456", "metadata": {}, "attachments": {}, "source": ["## Exercise 4 :  How many ones"]}, {"cell_type": "code", "id": "123456", "metadata": {}, "execution_count": null, "outputs": [], "source": ["\n\n\n# Your solution here\n\n\n"]}], "metadata": {"kernelspec": {"display_name": "Python 3", "language": "python", "name": "python3"}, "language_info": {"codemirror_mode": {"name": "ipython", "version": 3}, "file_extension": ".py", "mimetype": "text/x-python", "name": "python", "nbconvert_exporter": "python", "pygments_lexer": "ipython3", "version": "3.10.6 (main, Nov 14 2022, 16:10:14) [GCC 11.3.0]"}, "toc": {"base_numbering": 1, "nav_menu": {}, "number_sections": true, "sideBar": true, "skip_h1_title": false, "title_cell": "Table of Contents", "title_sidebar": "Contents", "toc_cell": false, "toc_position": {}, "toc_section_display": true, "toc_window_display": false}, "vscode": {"interpreter": {"hash": "31f2aee4e71d21fbe5cf8b01ff0e069b9275f58929596ceb00d14d90e3e16cd6"}}}, "nbformat": 4, "nbformat_minor": 5}
+{
+ "cells": [
+  {
+   "cell_type": "markdown",
+   "id": "123456",
+   "metadata": {},
+   "source": [
+    "<div style=\"text-align:left;font-size:2em\"><span style=\"font-weight:bolder;font-size:1.25em\">SP2273 | Learning Portfolio</span><br><br><span style=\"font-weight:bold;color:darkred\">Storing Data (Need)</span></div>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "90a35dd9",
+   "metadata": {},
+   "source": [
+    "## 1 Lists, Arrays & Dictionaries"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "55d5a86f",
+   "metadata": {},
+   "source": [
+    "### 1.1 Let’s compare"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "fd8b5291",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np\n",
+    "\n",
+    "py_super_names = [\"Black Widow\", \"Iron Man\", \"Doctor Strange\"]\n",
+    "py_real_names = [\"Natasha Romanoff\", \"Tony Stark\", \"Stephen Strange\"]\n",
+    "\n",
+    "np_super_names = np.array([\"Black Widow\", \"Iron Man\", \"Doctor Strange\"])\n",
+    "np_real_names = np.array([\"Natasha Romanoff\", \"Tony Stark\", \"Stephen Strange\"])\n",
+    "\n",
+    "superhero_info = {\"Natasha Romanoff\": \"Black Widow\",\n",
+    "                  \"Tony Stark\": \"Iron Man\",\n",
+    "                  \"Stephen Strange\": \"Doctor Strange\"\n",
+    "                  }"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9e236e55",
+   "metadata": {},
+   "source": [
+    "### 1.2 Accessing data from a list (or array)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "5043ad9c",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "HSH1000\n",
+      "S/U\n"
+     ]
+    }
+   ],
+   "source": [
+    "py_mods = [\"CM1102\", \"HSH1000\", \"HSA1000\"]\n",
+    "py_grades = [\"ez A+\", \"S/U\", \"S/U as well\"]\n",
+    "\n",
+    "print(py_mods[1])\n",
+    "print(py_grades[1])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "141aaf8f",
+   "metadata": {},
+   "source": [
+    "### 1.3 Accessing data from a dictionary"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "98eaa8bc",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "ez A+\n"
+     ]
+    }
+   ],
+   "source": [
+    "module_grades = {\"CM1102\":\"ez A+\",\n",
+    "                \"HSH1000\":\"S/U man\",\n",
+    "                \"DTK1234\":\"Just S/U\"\n",
+    "                }\n",
+    "\n",
+    "print(module_grades[\"CM1102\"])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f26aff58",
+   "metadata": {},
+   "source": [
+    "### 1.4 Higher dimensional lists"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "c6b5c9ff",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "py_module_grades = [[\"CM1102\",\"ez A+\"],\n",
+    "                   [\"HSH1000\", \"S/U\"],\n",
+    "                   [\"HSA1000\", \"Also S/U\"]]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "10c72043",
+   "metadata": {},
+   "source": [
+    "## 2 Lists vs. Arrays"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6a0df16b",
+   "metadata": {},
+   "source": [
+    "### 2.1 Size"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "69cbcdbe",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "10"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "py_list_2d = [[1, \"A\"], [2, \"B\"], [3, \"C\"], [4, \"D\"],\n",
+    "              [5, \"E\"], [6, \"F\"], [7, \"G\"], [8, \"H\"],\n",
+    "              [9, \"I\"], [10, \"J\"]]\n",
+    "\n",
+    "np_array_2d = np.array(py_list_2d)      # Reusing the Python list \n",
+    "                                        # to create a NEW\n",
+    "                                        # NumPy array\n",
+    "\n",
+    "len(py_list_2d)\n",
+    "len(np_array_2d)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5f26a9c1",
+   "metadata": {},
+   "source": [
+    "### 2.2 Arrays are fussy about type"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "a61dc381",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array(['1', '1.5', 'A'], dtype='<U32')"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "py_list = [1, 1.5, 'A']\n",
+    "np.array(py_list)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1b316236",
+   "metadata": {},
+   "source": [
+    "### 2.3 Adding a number"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "f83db097",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([11, 12, 13, 14, 15])"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "py_list = [1, 2, 3, 4, 5]\n",
+    "np_array = np.array(py_list)         # Reusing the Python list\n",
+    "                                     # to create a NEW\n",
+    "                                     # NumPy array\n",
+    "\n",
+    "np_array + 10"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "27082afa",
+   "metadata": {},
+   "source": [
+    "### 2.4 Adding another list"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "7238467e",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([11, 22, 33, 44, 55])"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "py_list_1 = [1, 2, 3, 4, 5]\n",
+    "py_list_2 = [10, 20, 30, 40, 50]\n",
+    "\n",
+    "np_array_1 = np.array(py_list_1)\n",
+    "np_array_2 = np.array(py_list_2)\n",
+    "\n",
+    "py_list_1 + py_list_2\n",
+    "np_array_1 + np_array_2"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4a1dcff8",
+   "metadata": {},
+   "source": [
+    "### 2.5 Multiplying by a Number"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "id": "d807eb6e",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([ 2,  4,  6,  8, 10])"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "py_list = [1, 2, 3, 4, 5]\n",
+    "np_array = np.array(py_list)         \n",
+    "np_array*2"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2dd66ee3",
+   "metadata": {},
+   "source": [
+    "### 2.6 Squaring"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "id": "78a446f7",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([ 1,  4,  9, 16, 25])"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "py_list = [1, 2, 3, 4, 5]\n",
+    "np_array = np.array(py_list)\n",
+    "\n",
+    "np_array**2"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "fc3a800e",
+   "metadata": {},
+   "source": [
+    "### 2.7 Asking questions"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "id": "cfef82be",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([False, False, False,  True,  True])"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "py_list = [1, 2, 3, 4, 5]\n",
+    "np_array = np.array(py_list)         \n",
+    "\n",
+    "py_list == 3\n",
+    "np_array > 3"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d49f1c11",
+   "metadata": {},
+   "source": [
+    "### 2.8 Mathematics"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "id": "02089c4d",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "15"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "py_list = [1, 2, 3, 4, 5]\n",
+    "np_array = np.array(py_list)      \n",
+    "\n",
+    "sum(py_list)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8e7752d6",
+   "metadata": {},
+   "source": [
+    "## Exercise 1 :  Total recall?"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "33ca3a62",
+   "metadata": {},
+   "source": [
+    "1. Both lists and arrays are able to store values, and mathematical functions can be applied on them\n",
+    "2. Multiplying a list by a number expands it, while multiplying an array by a number multiplies every element in it\n",
+    "Adding 2 lists together combines all elements into 1 list, while adding 2 arrays sums up each corresponding element\n",
+    "3. A dictionary is a form of data storage that pairs values with a set of keys"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "076a1fa6",
+   "metadata": {},
+   "source": [
+    "## Exercise 2 :  Index me"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "id": "84dc32ce",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "a1 c3 e5 g7 i9\n"
+     ]
+    }
+   ],
+   "source": [
+    "py_list = [\"a1\", \"b2\", \"c3\", \"d4\", \"e5\", \"f6\", \"g7\", \"h8\", \"i9\", \"j10\"]\n",
+    "                    # Prints 'a1'\n",
+    "                    # Prints 'c3'\n",
+    "                    # Prints 'e5'\n",
+    "                    # Prints 'g7'\n",
+    "print(py_list[0], py_list[2], py_list[4], py_list[6], py_list[8])   # Prints 'i9'"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "75be35b2",
+   "metadata": {},
+   "source": [
+    "## Exercise 3 :  Capitalise Heros"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "id": "df008d2e",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'Natasha Romanoff': 'BLACK WIDOW', 'Tony Stark': 'IRON MAN', 'Stephen Strange': 'DOCTOR STRANGE'}\n"
+     ]
+    }
+   ],
+   "source": [
+    "superhero_info = {\"Natasha Romanoff\": \"Black Widow\",\n",
+    "                  \"Tony Stark\": \"Iron Man\",\n",
+    "                  \"Stephen Strange\": \"Doctor Strange\"\n",
+    "                  }\n",
+    "\n",
+    "superhero_info['Tony Stark'] = superhero_info['Tony Stark'].upper()                  \n",
+    "superhero_info['Natasha Romanoff'] = superhero_info['Natasha Romanoff'].upper()\n",
+    "superhero_info['Stephen Strange'] = superhero_info['Stephen Strange'].upper()\n",
+    "\n",
+    "print(superhero_info)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "bc5f1641",
+   "metadata": {},
+   "source": [
+    "## Exercise 4 :  How many ones"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "id": "f7c5269e",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "9"
+      ]
+     },
+     "execution_count": 37,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "numbers=[45, 60, 1, 30, 96, 1, 96, 57, 16, 1,\n",
+    "        99, 62, 86, 43, 42, 60, 59, 1, 1, 35,\n",
+    "        83, 47, 34, 28, 68, 23, 22, 92, 1, 79,\n",
+    "        1, 29, 94, 72, 46, 47, 1, 74, 32, 20,\n",
+    "        8, 37, 35, 1, 89, 29, 86, 19, 43, 61]                  \n",
+    "\n",
+    "np_array = np.array(numbers)\n",
+    "\n",
+    "array = np_array == 1\n",
+    "\n",
+    "array.sum()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e8adb91c",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  }
+ ],
+ "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3 (ipykernel)",
+   "language": "python",
+   "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.10.8"
+  },
+  "toc": {
+   "base_numbering": 1,
+   "nav_menu": {},
+   "number_sections": true,
+   "sideBar": true,
+   "skip_h1_title": false,
+   "title_cell": "Table of Contents",
+   "title_sidebar": "Contents",
+   "toc_cell": false,
+   "toc_position": {},
+   "toc_section_display": true,
+   "toc_window_display": false
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "31f2aee4e71d21fbe5cf8b01ff0e069b9275f58929596ceb00d14d90e3e16cd6"
+   }
+  }
+ },
+ "nbformat": 4,
+ "nbformat_minor": 5
+}
